; ModuleID = '/home/carl/AnghaBench/linux/net/9p/extr_trans_xen.c_p9_xen_write_todo.c'
source_filename = "/home/carl/AnghaBench/linux/net/9p/extr_trans_xen.c_p9_xen_write_todo.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xen_9pfs_dataring = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64, i64 }

@XEN_9PFS_RING_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.xen_9pfs_dataring*, i64)* @p9_xen_write_todo to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @p9_xen_write_todo(%struct.xen_9pfs_dataring* %0, i64 %1) #0 {
  %3 = alloca %struct.xen_9pfs_dataring*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.xen_9pfs_dataring* %0, %struct.xen_9pfs_dataring** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load %struct.xen_9pfs_dataring*, %struct.xen_9pfs_dataring** %3, align 8
  %8 = getelementptr inbounds %struct.xen_9pfs_dataring, %struct.xen_9pfs_dataring* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  store i64 %11, i64* %5, align 8
  %12 = load %struct.xen_9pfs_dataring*, %struct.xen_9pfs_dataring** %3, align 8
  %13 = getelementptr inbounds %struct.xen_9pfs_dataring, %struct.xen_9pfs_dataring* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 1
  %16 = load i64, i64* %15, align 8
  store i64 %16, i64* %6, align 8
  %17 = call i32 (...) @virt_mb()
  %18 = load i64, i64* @XEN_9PFS_RING_SIZE, align 8
  %19 = load i64, i64* %6, align 8
  %20 = load i64, i64* %5, align 8
  %21 = load i64, i64* @XEN_9PFS_RING_SIZE, align 8
  %22 = call i64 @xen_9pfs_queued(i64 %19, i64 %20, i64 %21)
  %23 = sub nsw i64 %18, %22
  %24 = load i64, i64* %4, align 8
  %25 = icmp sge i64 %23, %24
  %26 = zext i1 %25 to i32
  ret i32 %26
}

declare dso_local i32 @virt_mb(...) #1

declare dso_local i64 @xen_9pfs_queued(i64, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
